# arbiter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  claudius-repl-spec.docx  nuragic-culture-reference.md  nuragic-culture-reference.md.bak  poem-thresholds.txt  rust-async-survey-2025-bulleted.md
.arbiter/memory/: research.md
.claude/: settings.local.json
.github/workflows/: bump-homebrew.yml  ci.yml  release.yml
.index/memory/: research.md  researcher.md
.playwright-mcp/: page-2026-04-29T18-12-39-657Z.yml  page-2026-04-29T18-12-44-558Z.yml  page-2026-04-29T18-13-12-536Z.yml  page-2026-04-30T14-54-39-222Z.yml  page-2026-04-30T14-54-40-756Z.yml  page-2026-04-30T14-55-09-724Z.yml  page-2026-04-30T14-55-11-258Z.yml
agents/: backend.json  devops.json  frontend.json  marketer.json  planner.json  research.json  reviewer.json  social.json  writer.json
bench/longmemeval/: README.md  grade.py  ingest.py  query.py
cmake/: embed_starters.cmake
docs/: api.md  mcp_servers.example.json  philosophy.md
docs/api/: health.md  index.md  metrics.md  (+3 more)
examples/: mcp_servers.json
include/: agent.h  api_client.h  api_server.h  auth.h  billing_client.h  circuit_breaker.h  cli.h  cli_helpers.h  commands.h  config.h  constitution.h  cost_tracker.h  idempotency_cache.h  json.h  logger.h  loop_manager.h  markdown.h  metrics.h  notification_bus.h  orchestrator.h  quartermaster_client.h  readline_wrapper.h  request_event_bus.h  sandbox.h  schedule_parser.h  scheduler.h  server.h  starters.h  tenant_limiter.h  tenant_store.h  theme.h  title_generator.h
scripts/: claudius-cli.sh  index-cli.sh
src/: advisor_gate.cpp  agent.cpp  api_client.cpp  api_server.cpp  auth.cpp  billing_client.cpp  circuit_breaker.cpp  cli.cpp  cli_helpers.cpp  commands.cpp  constitution.cpp  cost_tracker.cpp  idempotency_cache.cpp  json.cpp  logger.cpp  loop_manager.cpp  main.cpp  markdown.cpp  metrics.cpp  notification_bus.cpp  orchestrator.cpp  quartermaster_client.cpp  readline_wrapper.cpp  request_event_bus.cpp  sandbox.cpp  schedule_parser.cpp  scheduler.cpp  server.cpp  starters.cpp  tenant_limiter.cpp  tenant_store.cpp  theme.cpp  title_generator.cpp
tests/: pty_harness.cpp  pty_harness.h  test_a2a.cpp  test_advisor_gate.cpp  test_api_client.cpp  test_artifacts.cpp  test_circuit_breaker.cpp  test_commands.cpp  test_constitution.cpp  test_idempotency_cache.cpp  test_lessons.cpp  test_line_editor.cpp  test_logger.cpp  test_mcp.cpp  test_memory_entries.cpp  test_metrics.cpp  test_request_log.cpp  test_schedule_parser.cpp  test_stream_filter.cpp  test_tenant_agents.cpp  test_tenant_limiter.cpp  test_todos.cpp
(+148 files in other folders)
